--- a/private/css/style.css
+++ b/private/css/style.css
@@ -351,7 +351,7 @@ a.propButton img {
 
 #torrentsFilterToolbar {
     float: right;
-    margin-right: 30px;
+    margin-right: 10px;
 }
 
 #torrentsFilterInput {
@@ -361,6 +361,7 @@ a.propButton img {
     background-repeat: no-repeat;
     background-size: 1.5em;
     background-position: left;
+    height: 28px;
 }
 
 #torrentFilesFilterToolbar {
